<resources>
    <string name="app_name">Cryptographer</string>
    <string name="placeholder">Placeholder</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac turpis egestas integer eget aliquet nibh praesent. Consectetur adipiscing elit duis tristique. Purus sit amet luctus venenatis lectus magna fringilla. Tempor orci eu lobortis elementum nibh tellus molestie. Quis lectus nulla at volutpat diam ut venenatis tellus. Quis auctor elit sed vulputate mi sit. Tortor at auctor urna nunc. Dolor morbi non arcu risus quis varius quam. Id faucibus nisl tincidunt eget nullam. Et egestas quis ipsum suspendisse ultrices. Lacus vel facilisis volutpat est velit egestas dui. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus. Nisi porta lorem mollis aliquam ut. Nec tincidunt praesent semper feugiat nibh sed pulvinar. Cras sed felis eget velit aliquet sagittis id consectetur purus. Morbi blandit cursus risus at ultrices mi tempus imperdiet nulla. Bibendum enim facilisis gravida neque convallis a. Ultrices vitae auctor eu augue. Egestas purus viverra accumsan in nisl nisi scelerisque eu.</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="attributions">Icon Attributions</string>
    <string name="settings_macro_label"><u>Macro Settings</u></string>
    <string name="main_icon_credits">Cryptography icons created by Freepik - Flaticon</string>
    <string name="cipher_icon_credits">Cipher icons created by Pixelmeetup - Flaticon</string>
    <string name="image_processing_icon_credits">Image processing icons created by Freepik - Flaticon</string>
    <string name="qr_icon_credits">Scanner icons created by Freepik - Flaticon</string>
    <string name="delete_all_macros">Delete All Macros</string>
    <string name="macro_deletion_confirm">Are you sure you want to delete all
        macros?\n\nThe following macros will be irreversibly deleted: %s</string>
    <string name="all_macro_data_cleared">All macro data has been deleted.</string>
    <string name="cipher_list_text">Encode / Decode Messages</string>
    <string name="images_list_text">Process Images</string>
    <string name="qr_codes_list_text">Scan QR Codes</string>
    <string name="macros_list_text">Manage Macros</string>
    <string name="list_view_selected">list_view_selected</string>
    <string name="bundle_cipher">bundle_cipher</string>
    <string name="cipher_args_fragment">cipher_args_fragment</string>
    <string name="cipher_activity_title">Ciphers</string>
    <string name="cipher_caesar">Caesar</string>
    <string name="cipher_substitution">Substitution</string>
    <string name="cipher_vigenere">Vigenère</string>
    <string name="cipher_atbash">Atbash</string>
    <string name="encode_placeholder_text">Place your plaintext here…</string>
    <string name="decode_placeholder_text">Place your ciphertext here…</string>
    <string name="no_input_provided">No input was provided.</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="encoding_options"><u>Encoding Options</u></string>
    <string name="copy_result_to_input"><u>Copy Result into Input Field</u></string>
    <string name="clear_fields"><u>Clear Encoder Inputs</u></string>
    <string name="output_hint">Your output text will be here after inputting the
        necessary arguments by pressing "encode" or "decode"</string>
    <string name="output_hint_caesar">\n\nIf you select decode, it will rotate in
        the opposite direction provided.</string>
    <string name="analyze_frequency"><u>Analyze Frequency of Input</u></string>
    <string name="cipher_selection_message"><i>Select a cipher to enter the encoder</i></string>
    <string name="descript_caesar_short">&lt;i&gt;Rotate the Alphabet&lt;/i&gt;</string>
    <string name="descript_substitution_short">&lt;i&gt;Substitute the
        Alphabet&lt;/i&gt;</string>
    <string name="descript_vigenere_short">&lt;i&gt;Encrypt with Secret Key&lt;/i&gt;</string>
    <string name="descript_atbash_short">&lt;i&gt;Invert the Alphabet&lt;/i&gt;</string>
    <string name="cryptography">cryptography</string>
    <string name="arrows">↓\t\t↓\t\t↓</string>
    <string name="cipher_title_caesar"><u>Caesar Cipher</u></string>
    <string name="cipher_description_caesar">The Caesar cipher, also known as the shift
        cipher, is one of simplest encryption schemes. It works by substituting each
        letter in the plaintext with another letter X fixed positions down the alphabet.
        For example, if you rotated \'A\' by 2, it would become \'C\'. The alphabet also
        wraps around, so if you shift a \'Z\' by 2, it will become a B. The technique
        utilized to decode a Caesar cipher is to perform the encoding rotation again but
        in the opposite direction. If you shift by 3 to encode, you would have to shift by
        -3 to decode. Due to the simplicity of this encryption scheme, it provides
        basically no security as it can be easily cracked using a brute force attack.</string>
    <string name="rotate_amount">Rotate Amount: </string>
    <string name="encode_fail_no_rotate_provided">You must either provide a
        rotate amount or generate one before running the cipher.\n\nThe rotate
        amount can be any whole positive or negative numbers.</string>
    <string name="cipher_title_substitution"><u>Substitution Cipher</u></string>
    <string name="cipher_description_substitution">A substitution cipher is an
        encryption method in which each letter in the plaintext is matched
        with a different letter in the cipher text. It requires an \"alphabet\"
        to be created, where the first letter corresponds to A, the second one to
        B, and so on. If your alphabet provided was CAT… then all A\'s would map to
        C, all B\'s to A, and all C\'s to T. No two letters in the plaintext can map to
        the same letter in the ciphertext, so each letter must be used only once while
        creating the alphabet. While substitution ciphers are more difficult to brute
        force, one can crack them by performing Frequency Analysis to study the
        frequency of letters in a ciphertext and attempt to map them to letters in the
        real English alphabet.
    </string>
    <string name="freq_analysis_fail_no_input">You must provide an input string
        to perform frequency analysis.</string>
    <string name="alphabet_label">Alphabet: </string>
    <string name="encode_fail_bad_alphabet">Your must provide a valid alphabet
        containing all 26 letters or generate one before running the cipher.</string>
    <string name="cipher_title_vigenere"><u>Vigenère Cipher</u></string>
    <string name="cipher_description_vigenere">The Vigenère cipher is an
        encryption scheme in which each letter of the plaintext is encoded with a
        different rotating Caesar cipher. The provided key provides the rotate
        amounts, and is repeated until the length of the plaintext. If your key
        was BAG, it would rotate the first character by 1, the second one by 0, and
        the third one by 6 (then repeat). Please note that rotating by A is the same
        thing as rotating by 0, as that is the 0th index of the alphabet. Vigenère
        ciphers are very difficult to crack without knowing the key. However, if you
        know the key length, you could split the letters into groups based on their
        indices and perform Frequency Analysis on each group to try to determine the key.
    </string>
    <string name="key_label">Key:</string>
    <string name="encode_fail_bad_key">You must provide a valid key (of any
        length) or generate one before running the cipher</string>
    <string name="cipher_title_atbash"><u>Atbash Cipher</u></string>
    <string name="cipher_description_atbash">An Atbash cipher is another simple
        encryption method that is based off of a substitution cipher. It works by
        taking the alphabet and mapping the inverse to itself so the first letter
        becomes the last letter. In this cipher, A\'s become Z\'s, and B\'s become
        Y\'s. This scheme is very simple to decode as you just perform the same
        algorithm again to reverse the text back to the original. Due to the simplicity
        of this encryption scheme it provides practically no communications security
        and can be cracked almost instantly upon recognizing it was used.
    </string>
    <string name="frequency_analysis">Frequency Analysis</string>
    <string name="input_string">Input String:</string>
    <string name="freq_analysis_input_bundle">input_bundle</string>
    <string name="freq_analysis_cipher_bundle">cipher_bundle</string>
    <string name="freq_analysis_alphabet_bundle">alphabet_bundle</string>
    <string name="freq_analysis_key_bundle">key_bundle</string>
    <string name="freq_analysis_input_field">INPUT:</string>
    <string name="freq_analysis_transfer_created_alphabet"><u>Transfer Created Alphabet to
        Encoder</u></string>
    <string name="freq_analysis_transfer_created_key"><u>Transfer Created Key to
        Encoder</u></string>
    <string name="graph_hint"><i>The starred letters correspond to the average
        frequency of letters in English text.\nThe non-starred letters correspond
        to the relative frequency of letters in the input string.</i></string>
    <string name="graph_hint_input"><i>Relative Frequency of Input</i></string>
    <string name="graph_hint_english"><i>Relative Frequency of English Language</i></string>
    <string name="freq_analysis_cannot_return_invalid">This is not a valid
        alphabet. Did you make sure that every letter was only used once?\n\nYou
        can still return to the previous screen without transferring your created
        alphabet by clicking the back arrow in the top right.</string>
    <string name="substitution_cracker"><u>Substitution Cracker</u></string>
    <string name="vigenere_cracker"><u>Vigenère Cracker</u></string>
    <string name="vigenere_test_key">Test Key:</string>
    <string name="vigenere_group_size">Group Size:</string>
    <string name="vigenere_group_number">Group Number:</string>
    <string name="vigenere_update_graph">Update Graph</string>
    <string name="invalid_values_zero">The group size and group length must be
        greater than zero.</string>
    <string name="flags_dialog_text_case"><u>Output Text Case</u></string>
    <string name="flags_dialog_preserve_case">Preserve Case</string>
    <string name="flags_dialog_all_upper">All Uppercase</string>
    <string name="flags_dialog_all_lower">All Lowercase</string>
    <string name="flags_dialog_chars"><u>Characters</u></string>
    <string name="flags_dialog_preserve_chars">Preserve Extra Characters</string>
    <string name="flags_dialog_strip_chars">Strip Extra Characters</string>
    <string name="flags_dialog_numbers"><u>Numbers</u></string>
    <string name="flags_dialog_number_checkbox">Encode Numbers</string>
    <string name="flags_dialog_numbers_disallowed"><i>Numbers cannot be encoded for
        this cipher.\nThey will be stripped/preserved with other characters</i></string>
    <string name="cipher_type"><u>Cipher Type</u></string>
    <string name="required_arguments"><u>Required Arguments</u></string>
    <string name="optional_arguments"><u>Optional Arguments</u></string>
    <string name="output_text_case"><u>Output Text Case:</u></string>
    <string name="editor_characters"><u>Characters:</u></string>
    <string name="encode_numbers">Encode Numbers</string>
    <string name="numbers_disallowed_editor"><i>This cipher cannot encode numbers.</i></string>
    <string name="no_extra_args"><i>This cipher does not require additional arguments.</i></string>
</resources>